# Web-Backend

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
vrc-backend/: Cargo.toml
vrc-backend/migrations/: 20250101000000_initial_schema.sql  20250102000000_add_updated_at_columns.sql  20250103000000_performance_indexes.sql  20250104000000_spec_compliance.sql  20250105000000_add_gallery_target_scope.sql  20260323191000_add_schedule_support.sql  20260323221500_add_admin_managed_roles.sql  20260323233500_add_admin_system_role_permissions.sql
vrc-backend/src/: lib.rs  main.rs
vrc-backend/src/adapters/inbound/extractors/: mod.rs  validated_json.rs  validated_query.rs
vrc-backend/src/adapters/inbound/middleware/: csrf.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
vrc-backend/src/adapters/inbound/routes/: admin.rs  auth.rs  health.rs  internal.rs  metrics_endpoint.rs  mod.rs  public.rs  schedule.rs  system.rs
vrc-backend/src/adapters/outbound/: mod.rs
vrc-backend/src/adapters/outbound/discord/: client.rs  webhook.rs
vrc-backend/src/adapters/outbound/markdown/: renderer.rs
vrc-backend/src/adapters/outbound/postgres/: club_repo.rs  event_repo.rs  gallery_repo.rs  mod.rs  profile_repo.rs  report_repo.rs  session_repo.rs  user_repo.rs
vrc-backend/src/auth/: admin_permissions.rs  crypto.rs  extractor.rs  mod.rs  roles.rs
vrc-backend/src/background/: scheduler.rs
vrc-backend/src/config/: mod.rs
vrc-backend/src/domain/entities/: club.rs  event.rs  gallery.rs  mod.rs  profile.rs  report.rs  session.rs  user.rs
vrc-backend/src/domain/ports/repositories/: club_repository.rs  event_repository.rs  mod.rs  (+5 more)
vrc-backend/src/domain/value_objects/: pagination.rs
vrc-backend/src/errors/: api.rs  domain.rs  infrastructure.rs
vrc-backend/tests/: api_tests.rs  error_response_contract_tests.rs  query_validation_contract_tests.rs  router_contract_tests.rs  system_validation_contract_tests.rs
vrc-backend/tests/support/: mod.rs
(+191 files in other folders)
