[package]
name = "vrc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "catch-panic", "request-id", "set-header"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "time", "macros"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# HTTP client (for Discord API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Markdown + sanitization
pulldown-cmark = "0.12"
ammonia = "4"

# Security
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"
rand = "0.9"
hex = "0.4"
urlencoding = "2"
time = "0.3"
regex-lite = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# Secrets
secrecy = "0.10"

# Rate limiting
governor = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ulid = "1"
itoa = "1"

# Proc macros (workspace member)
vrc-macros = { path = "../vrc-macros" }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1"
serde_urlencoded = "0.7"

[lints.clippy]
all = "warn"
pedantic = "warn"
# Allow common patterns that pedantic flags
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
# Kani sets this cfg when running formal verification
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
